[gd_scene load_steps=5 format=3 uid="uid://bnetggqh07qgx"]

[ext_resource type="Script" path="res://Scripts/Menu_screen.gd" id="1_l0p08"]
[ext_resource type="Texture2D" uid="uid://b3mm2p1mfeaxb" path="res://Assets/Menu_Backdrop.png" id="2_flvt1"]

[sub_resource type="SystemFont" id="SystemFont_d3cpd"]
font_names = PackedStringArray("Impact")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_7evje"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Node2D"]
script = ExtResource("1_l0p08")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["Main menu"]]
scale = Vector2(1.386, 1.396)
transform = Transform2D(1.386, 0, 0, 1.396, 0, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 4.0
offset_top = -1.0
offset_right = 1155.0
offset_bottom = 645.0
texture = ExtResource("2_flvt1")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 1151.0
offset_bottom = 649.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="separator" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_d3cpd")
theme_override_font_sizes/font_size = 64
text = "GAME TITLE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="separator2" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="play_button" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7evje")
theme_override_font_sizes/font_size = 32
text = "Play
"

[node name="separator" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Custom_Button" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7evje")
theme_override_font_sizes/font_size = 32
text = "Deck Builder
"

[node name="separator3" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit_Button" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_7evje")
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/play_button" to="." method="on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="on_exit_pressed"]
